-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.443 2009-03-14 21:35:38 guru Exp $
-----------------------------------------------------------------------------------------

2009-03-14	pwessel
	* x2sys/x2sys_init.c:	Now properly copies the *.def file to the TAG dir.
	* x2sys/x2sys_cross.c:	Removed the -F option which was not honored anyway.
	* mgd77/mgd77convert.c:	Allow users to give file.ext on command line.
	
2009-03-14	jluis
	* gmt_io.{c,h}:		Created GMT_fgetc & GMT_ungetc to use with mgd77 supplements.
	* mgd77/mgd77.c		Now works on Windows (but still crashes if use -L option) 
	* x2sys/x2sys_put.c	Fixed -D option (was falling in a endless loop)

2009-03-12	remko
	* gmt_nc.c, gmt_grd.h:	Properly handle netCDF that have LatLon = 0, 1: flip x and y.

2009-03-09	pwessel
	* grdmath.c:		The PDIST operator did not handle binary input files (as LDIST does).

2009-03-08	jluis
	* gmt_support.{c,h}:	New function GMT_chop_ext() to remove the extension from filename string
	* mgg/gmt_mgg.c:	New -T and -W options to store total field and account for the
				magnetometer tow distance. Also tries to get info from header file.
	* mgg/mgd77togmt.c:	--"--"

2009-03-05	pwessel
	* gmtselect.c:		The -Z option can now handle dateTclock strings for used with
				data whose 3rd column contains time.
	* blockmedian.c:	Now returns the quantile(x), quantile(y) location when -T is used.
				Added -Eb to get box-and-whisker output (0. 25, 50, 75, and 100% quantiles).

2009-03-05	jluis
	* ps2raster.c:		Added -Wg to create a simple KML file for Google Earth.
				Recognize -Jx<scale> (e.g. no 'd') as a linear geographic
				projection when -R<region> fits inside a sane ([-180 360][-90 90])
				interval (when -W is used).

2009-03-04	pwessel
	* mgd77/mgd77list.c:	Now can specify -DA and -DB which, in the presence of time = NaN,
				will not output such records [-Da|b will].  Also clarified the
				ranges implied by -D/-S.